--- a/Project_1/main.html
+++ b/Project_1/main.html
@@ -1,15 +1,17 @@
-
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>ECE 478 Project 1</title>
     <script src="script.js"></script>
 </head>
+
 <body>
 
     <h1>ECE 478 Project 1</h1><br>
-    <button id="startBtn" onclick="generateTimings()">Testing</button>
+    <button id="startBtn" onclick="generateTimings()">Start - Check Console</button>
 
 </body>
+
 </html>
