--- a/Project_1/main.html
+++ b/Project_1/main.html
@@ -51,8 +51,9 @@
         </tr>
     </table>
 
-    <br><button id="startBtn" onclick="generateTimings()">Start - Check Console</button>
-
+    <br><button id="startBtn" onclick="generateTimings()">Calculate</button>
+    <br>
+    <div id="output"></div>
 </body>
 
 </html>
