--- a/Project_1/main.html
+++ b/Project_1/main.html
@@ -52,7 +52,8 @@
     </table>
 
     <br><button id="startBtn" onclick="generateTimings()">Calculate</button>
-    <br>
+    <br><br>
+    <button id="testBtn" onclick="testing()">Test button</button><br>
     <div id="output"></div>
 </body>
 
