--- a/Project_1/main.html
+++ b/Project_1/main.html
@@ -52,9 +52,10 @@
         </tr>
     </table>
 
-    <br><button id="startBtn" onclick="generateTimings()">Calculate</button>
+    <br><button id="startBtn" onclick='generateTimings("0")'>Calculate</button>
     <br><br>
     <button id="testBtn" onclick="testing()">Test button</button><br>
+    <div id="testDiv"></div>
     <div id="chart" style="width: 50%;">
         <canvas id="myChart" width="200" height="200"></canvas>
     </div>
