--- a/Project_1/main.html
+++ b/Project_1/main.html
@@ -6,6 +6,7 @@
     <title>ECE 478 Project 1</title>
     <script src="script.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" href="styles.css">
 
 </head>
