--- a/Project_1/main.html
+++ b/Project_1/main.html
@@ -52,6 +52,8 @@
             <td><input type="number" id="simTime" value=10> sec</td>
         </tr>
     </table>
+    <br>
+    Number of itterations (temp) : <input type="number" id="numOfItterations"><br><br>
 
     <br><button id="startBtn" onclick='generateTimings("0")'>Calculate</button>
     <br><br>
