--- a/Project_1/main.html
+++ b/Project_1/main.html
@@ -53,7 +53,7 @@
         </tr>
     </table>
     <br>
-    Number of itterations (temp) : <input type="number" id="numOfItterations"><br><br>
+    Number of itterations (temp) : <input type="number" id="numOfItterations" value=1><br><br>
 
     <br><button id="startBtn" onclick='generateTimings("0")'>Calculate</button>
     <br><br>
