--- a/Project_1/main.html
+++ b/Project_1/main.html
@@ -55,7 +55,7 @@
     <br>
     Number of itterations (temp) : <input type="number" id="numOfItterations" value=4><br><br>
 
-    <br><button id="startBtn" onclick='generateTimings("0")'>Calculate</button>
+    <br><button id="startBtn" onclick='begin()'>Calculate</button>
     <br><br>
     <div id="chart" style="width: 50%;">
         <canvas id="myChart" width="200" height="200"></canvas>
