--- a/Project_1/main.html
+++ b/Project_1/main.html
@@ -47,7 +47,7 @@
         </tr>
         <tr>
             <td>&lambda;<sub>A</sub> , &lambda;<sub>C</sub></td>
-            <td><input type="text" id="lambdaAC" value="50, 100, 200, 300"> frames/sec</td>
+            <td><input type="text" id="lambdaAC" value="50, 100, 200, 300" style="background-color: lightgray" readonly> frames/sec</td>
             <td>Simulation Time</td>
             <td><input type="number" id="simTime" value=10> sec</td>
         </tr>
