graph 1 and 2 fully working

--- a/Project_2/main.html
+++ b/Project_2/main.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>ECE 478 Project 2</title>
-    <script src="script.js?v=1.520000000012" defer></script>
+    <script src="script.js?v=1.5222" defer></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.7.0/dist/Chart.min.js"></script>
@@ -20,7 +20,10 @@
     <button onclick="graph1()">Graph 1</button><br><br>
     <button onclick="graph2()">Graph 2</button>
     <div id="chart" style="width: 50%;">
-        <canvas id="myChart" width="200" height="200"></canvas>
+        <canvas id="graph1" width="200" height="200"></canvas>
+    </div>
+    <div id="chart" style="width: 50%;">
+        <canvas id="graph2" width="200" height="200"></canvas>
     </div>
     <br><br>
     <div id="output"></div>
