--- a/Project_2/main.html
+++ b/Project_2/main.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>ECE 478 Project 2</title>
-    <script src="script.js?v=1.5222" defer></script>
+    <script src="script.js?v=1.522233222322111211" defer></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.7.0/dist/Chart.min.js"></script>
