--- a/Project_2/main.html
+++ b/Project_2/main.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <title>ECE 478 Project 2</title>
-    <script src="script.js?v=1.5355" defer></script>
+    <script src="script.js?v=1.53669989" defer></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.7.0/dist/Chart.min.js"></script>
     <script src="https://chartjs-plugin-datalabels.netlify.com/chartjs-plugin-datalabels.js"></script>
-    <link rel="stylesheet" type="text/css" href="styles.css?v=1.000">
+    <link rel="stylesheet" type="text/css" href="styles.css?v=1.00000">
 
 </head>
 
@@ -25,6 +25,9 @@
     </div>
     <div id="chart" style="width: 50%;">
         <canvas id="graph2" width="200" height="200"></canvas>
+    </div>
+    <div id="chart" style="width: 50%;">
+        <canvas id="graph3" width="200" height="200"></canvas>
     </div>
     <br><br>
     <div id="output"></div>
